--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/nicemodules/wordpress-orm",
   "require": {
     "php": ">=7.4",
-    "minime/annotations": "^3.1"
+    "doctrine/annotations": "^2.0"
   },
   "license": "MIT",
   "authors": [
